--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -34,8 +34,18 @@
     border-radius: 4px;
     max-height: 40px;
 }
+h5 {
+    color: red;
+    border: 1px solid red;
+    margin: 5px auto;
+    padding: 8px;
+    width: 300px;
+}
 .fcclogo {
     width: 250px;
+}
+tr.top100, th {
+    font-size: 18px;
 }
 tr.top100 td {
     vertical-align: middle;
