--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -38,8 +38,8 @@ h5 {
     color: red;
     border: 1px solid red;
     margin: 5px auto;
-    padding: 8px;
-    width: 300px;
+    padding: 10px 18px;
+    width: 310px;
 }
 .fcclogo {
     width: 250px;
